# AutoPazar

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js
.github/workflows/: ci.yml
api/: index.py  settings.py  urls.py  wsgi.py
apps/core/: admin.py  apps.py  context_processors.py  forms.py  models.py  reference_data.py  urls.py  utils.py  validators.py  views.py
apps/favorites/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/listings/: admin.py  apps.py  choices.py  forms.py  models.py  selectors.py  services.py  signals.py  urls.py  views.py
apps/messaging/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/moderation/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
config/: api_urls.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
docker/: entrypoint.sh
docker/gunicorn/: gunicorn.conf.py
docker/nginx/: default.conf
docs/commands/: autopazar_commands.txt
docs/deploy/: render.md
requirements/: base.txt  dev.txt
scripts/: bootstrap_demo.sh
static/css/: styles.css
static/src/: styles.css
templates/: 404.html  500.html  base.html
tests/: conftest.py  factories.py  test_auth.py  test_favorites.py  test_listings.py  test_messaging.py  test_moderation.py  test_reference_data.py
(+56 files in other folders)
