[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopazar"
version = "0.1.0"
description = "AutoPazar Django marketplace for peer-to-peer car sales in North Macedonia"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "django-filter>=24.0,<26.0",
    "django-environ>=0.11,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "celery[redis]>=5.4,<6.0",
    "gunicorn>=22.0,<24.0",
    "Pillow>=10.0,<12.0",
    "django-htmx>=1.19,<2.0",
    "django-ratelimit>=4.1,<5.0",
    "easy-thumbnails>=2.10,<3.0",
    "django-storages>=1.14,<2.0",
    "whitenoise>=6.8,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "factory-boy>=3.3,<4.0",
    "black>=24.0,<26.0",
    "isort>=5.13,<6.0",
    "flake8>=7.0,<8.0",
]

[project.scripts]
app = "api.wsgi:app"

[tool.setuptools.packages.find]
include = ["api*", "apps*", "config*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["apps", "config"]
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra --strict-markers --tb=short"
testpaths = ["tests"]
